# rriv-rust

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  rriv-rust.code-workspace
.github/workflows/: build-binary.yaml  semantic-release.yaml
Heater-Driver/: Cargo.toml
Heater-Driver/src/: main.rs
board/: Cargo.toml
board/.cargo/: config.toml
board/app/: Cargo.toml  Embed.toml  README.md  build.rs  memory.x
board/app/src/: board_select.rs  main.rs  prelude.rs
board/command_service/: Cargo.toml
board/command_service/src/: lib.rs
board/datalogger/: Cargo.toml
board/datalogger/src/: lib.rs
board/lib/: Cargo.toml  Embed.toml  bindings.rs  build.rs  cbindgen.toml  rriv-0-4.h  rrivlib.h  rrivrust.rs
board/lib/src/: lib.rs  prelude.rs
board/rriv-0-4/: Cargo.toml  bindings.rs  build.rs  cbindgen.toml  rust_serial.h
board/rriv-0-4/src/: lib.rs  serial.rs
board/rriv_board/: Cargo.toml
board/rriv_board/src/: gpio.rs  lib.rs
board/rriv_board_0_4_0/: Cargo.toml
board/rriv_board_0_4_0/src/: lib.rs
board/rriv_board_0_4_0/src/components/: storage.rs
board/rriv_board_0_4_0/src/pin_groups/: dynamic_gpio.rs  i2c1.rs  rgb_led.rs
board/rriv_board_0_4_2/: Cargo.toml
board/rriv_board_0_4_2/src/: battery_level.rs  block_device.rs  builder.rs  eeprom.rs  i2c.rs  internal_adc.rs  lib.rs  pins.rs  power.rs  rgb_led.rs  shared.rs  storage.rs  util.rs
board/rriv_board_0_4_2/src/components/: battery_level.rs  block_device.rs  clocks.rs  eeprom.rs  external_adc.rs  i2c.rs  internal_adc.rs  mod.rs  oscillator_control.rs  power_control.rs  rgb_led.rs  serial.rs  storage.rs  uid.rs  usb.rs  watchdog_timer.rs
board/rriv_board_0_4_2/src/pin_groups/: adc_external.rs  adc_internal.rs  battery_level.rs  dynamic_gpio.rs  i2c1.rs  i2c2.rs  mod.rs  oscillator_control.rs  power.rs  rgb_led.rs  serial.rs  spi.rs  spi2.rs  usb.rs
cpp/: platformio.ini
cpp/lib/: remove-libs.sh
cpp/src/: c-host.code-workspace  main.cpp  rust.c  rust.h
lib/: remove-libs.sh
rust/: Cargo.toml  README.md  bindings.rs  build.rs  cbindgen.toml  rust_serial.h
rust-binary/: Cargo.toml  Embed.toml  build.rs
rust-binary/.cargo/: config.toml
rust-binary/src/: main.rs
rust/src/: lib.rs  main-blink.rs  print-nope.rs  working.rs
rust/src/processor/: Cargo.toml
rust/src/processor/src/: lib.rs
scripts/: attach.sh  flash-init.sh  flash-latest.sh  flash.sh  sizing.sh
src/: Cargo.toml  README.md  main.cpp  rust_serial.h
src/command_service/: Cargo.toml
src/control_interface/: Cargo.toml
src/control_interface/src/: command_recognizer.rs  command_register.rs  command_registry.rs  lib.rs
src/datalogger/: Cargo.toml  build.rs
src/datalogger/src/: command_service.rs  datalogger_commands.rs  lib.rs  registry.rs  usart_service.rs
src/datalogger/src/datalogger/: bytes.rs  commands.rs  helper.rs  mod.rs  modes.rs  payloads.rs  settings.rs
src/datalogger/src/drivers/: AHT22.rs  aht20.rs  aht22.rs  atlas_ec.rs  driver_template.rs  ds18b20.rs  generic_analog.rs  heater.rs  k30_co2.rs  mcp9808.rs  mod.rs  rak3172.rs  ring_temperature.rs  timed_switch.rs  timed_switch_2.rs  types.rs
src/datalogger/src/drivers/atlas/: EC_OEM.cpp.txt  atlas_oem.rs  ec_oem.rs  mod.rs
src/datalogger/src/drivers/resources/: gpio.rs
src/datalogger/src/protocol/: board_response.rs  commands.rs  mod.rs  responses.rs  status.rs
src/datalogger/src/services/: command_service.rs  mod.rs  usart_service.rs
src/datalogger/src/telemetry/: mod.rs
src/datalogger/src/telemetry/codecs/: basic_codec.rs  mod.rs  naive_codec.rs
src/datalogger/src/telemetry/telemeters/: lorawan.rs  mod.rs  telemeter.rs
src/rriv-datalogger/: Cargo.toml
src/rriv-datalogger/src/: lib.rs
src/util/: Cargo.toml
src/util/src/: lib.rs
test/cpp-runner/: platformio.ini
test/cpp-runner/src/: main.cpp  rrivrust.h
test/rust-runner/: build.rs
