[package]
name = "app"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # optimize for size and don't unroll loops
codegen-units = 256 # setting this to 1 causes better optimizations, but slower code. setting it higher makes compiling parallelizable
debug = false       # symbols are nice and they don't increase the size on Flash
lto = true          # link-time optimizations

[profile.dev]
opt-level = 'z'     # optimize for size and don't unroll loops
codegen-units = 256 # setting this to 1 causes better optimizations, but slower code. setting it higher makes compiling parallelizable
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # link-time optimizations


# Optimize all dependencies
[profile.release.package."*"]
opt-level = "z"

[profile.dev.package."*"]
opt-level = "z"

[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2.0"
panic-abort = "0.3.2"

unwrap-infallible = "0.1.5"
rtt-target = "0.4.0"
embedded-alloc = "0.5.0"

rriv_board = { path = "../rriv_board" }
rriv_board_0_4_2 = { path = "../rriv_board_0_4_2" }
datalogger = { path = "../../src/datalogger" }

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "high"]
