[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0"
nb = "1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2.0"panic = "abort"
panic-abort = "0.3.2"

unwrap-infallible = "0.1.5"
rtt-target = "0.4.0"
embedded-alloc = "0.5.0"

rriv_board = { path = "../rriv_board" }
rriv_board_0_4_2 = { path = "../rriv_board_0_4_2" }
datalogger = { path = "../../src/datalogger" }
embedded-hal-bus = "0.3.0"


