[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
# panic-abort = "0.3.2"
# panic_rtt = "0.3.0"


unwrap-infallible = "0.1.5"
rtt-target = "0.4.0"
embedded-alloc = "0.5.0"

rriv_board = { path = "../rriv_board" }
rriv_board_0_4_2 = { path = "../rriv_board_0_4_2" }
datalogger = { path = "../../src/datalogger" }

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "high"]
