[package]
name = "command_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
control_interface = { path = "../../src/control_interface" }
rriv_board = { path = "../rriv_board" } 
hashbrown = "0.14"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
serde_json = { version = "1.0.104", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
rtt-target = "0.4.0"

