[package]
name = "rrivrust"
version = "0.1.0"
edition = "2021"

# Note: header file generation happens in build.rs
[lib]
crate-type = ["staticlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
unwrap-infallible = "0.1.5"
stm32f1xx-hal = { version = "0.10", features = ["rt", "stm32f103"] }
embedded-alloc = "0.5.0"
rtt-target = "0.4.0"

rriv_board_0_4_2 = { path = "../rriv_board_0_4_2" }
datalogger = { path = "../../src/datalogger" }
hashbrown = "0.14.0"

[build-dependencies]
cbindgen = "0.25.0"
bindgen = "0.68.1"
