[package]
name = "command_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
control_interface = { path = "../../src/control_interface" }
rriv_board = { path = "../../board/rriv_board" } 
hashbrown = "0.14"
serde_json = { version = "1.0.104", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
rtt-target = "0.4.0"

