[package]
name = "rriv-datalogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rriv-0-4 = { path = "../../board/rriv-0-4" }
control_interface = { path = "../control_interface" }
hashbrown = "0.14"


